--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,11 +21,13 @@
         android:paddingTop="2dp">
 
         <TextView
+            android:id="@+id/text_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2017-06-15" />
 
         <TextView
+            android:id="@+id/text_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="22:00"
@@ -33,17 +35,21 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/text_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
         android:gravity="center"
         android:text="test"
         android:textSize="20sp" />
 
     <ImageView
+        android:id="@+id/image_delete"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
         android:layout_marginLeft="-30dp"
+        android:layout_marginStart="-30dp"
         android:src="@drawable/ic_delete_black" />
 </LinearLayout>
