--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -37,51 +37,65 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/text_week_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="日"
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/text_week_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="一"
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/text_week_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="二"
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/text_week_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="三"
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/text_week_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="四"
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/text_week_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="五"
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/text_week_7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="六"
             android:textSize="20sp"/>
     </LinearLayout>
